@@ -386,6 +386,8 @@ struct _stat
 	time_t	st_ctime;	/* Creation time */
 };
 
+#ifndef	_NO_OLDNAMES
+/* NOTE: Must be the same as _stat above. */
 struct stat
 {
 	_dev_t	st_dev;		/* Equivalent to drive number 0=A 1=B ... */
@@ -401,6 +403,7 @@ struct stat
 	time_t	st_mtime;	/* Modified time */
 	time_t	st_ctime;	/* Creation time */
 };
+#endif /* _NO_OLDNAMES */
 
 #if defined (__MSVCRT__)
 struct _stati64 {
