@@ -1,3 +1,11 @@
+2005-02-07  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/sys/stat.h (struct stat): Guard with _NO_OLDNAMES.
+	* include/wchar.h (struct stat): Likwwise.
+	Bug reported to Debian by Anand Kumria  <wildfire@progsoc.org>
+
+	* include/sys/stat.h: Remove empty __STRICT_ANSI__ guard.
+
 2005-02-01  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* mingwex/strtold.c (__asctoe64): Set endptr to 'e' if exponent
